- Advanced search using date range did not return stories or comments in
  that date range (Mark)

Forum
-----
- Set width for text formatted code blocks in forum when using a fixed width
  layout (Eric)
- Fixed issue where duplicate forum names (different categories) did not show
  in the forum selection list for moderation functions. (Mark)

Media Gallery
-------------
- Added option to phpblock_mg_randommedia to link to album instead of media.
  Modify the block function to phpblock_mg_randommedia(album) (Mark)
- Added option to statically sort an album by rating (Mark)
- FTP import did not properly add trailing backslash if missing (Mark)
- Moved RSS feed files to the glFusion backend/ directory (Mark)
- Email moderators option did not appear in album edit / create (Mark)
- Under some circumstances creating an album would fail with an SQL error (Mark)
- Fixed issue where 'slideshow' auto tag did not honor the media_order
  field (Mark).
- FTP batch import would crash with SQL error (Mark)
- 0000428 Wiki type keywords - Added [alink] auto tag to allow text links
  to albums (Mark)
- 0000437 Slideshow autotag does not honor caption option in config. (Mark)
- Improved error handling when a user tries to access a media item they
  do not have permission to view (Mark)
- Random image block did not change (Mark)

Site Tailor
-----------
- 0000434: [Menu] copy menu does not work (mark)

StaticPages
-----------
- Unable to upload images via the advanced editor when cloning a story (Mark)

v1.1.3
------
- What's New block did not honor the URL rewrite setting for stories (Mark)
- 0000424: Reorder fields on 'Username & Password' tab to be more intuitive (Eric)
- Increased size of Forum category title text (Eric)
- Limit long term session cookie to user's ip to limit chances of
  user masquerading (Mark)
- 0000289 cleanup story options and incorporate template options (mark)
- 0000423 Not all staticpage options are cloned (mark)