@@ -35,6 +35,8 @@ Forum
 
 Media Gallery
 -------------
+- New config setting: $_MG_CONF['use_large_stars'] - if set to 1, the larger
+  stars will be used in the album view instead of the smaller stars. (Mark)
 - Added option to phpblock_mg_randommedia to link to album instead of media.
   Modify the block function to phpblock_mg_randommedia(album) (Mark)
 - Added option to statically sort an album by rating (Mark)
